force-app/main/default/objects/EmployeeInstruction__c/EmployeeInstruction__c.object-meta.xml
<CustomObject>
    <label>Employee Instruction</label>
    <nameField>
        <label>Employee Instruction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Instructions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>