force-app/main/default/objects/EmployeeInstruction__c/fields/AP44Price__c.field-meta.xml
<CustomField>
    <fullName>AP44Price__c</fullName>
    <description>% giá AP44</description>
    <label>AP44Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>