force-app/main/default/objects/EmployeeInstruction__c/fields/Birthday__c.field-meta.xml
<CustomField>
    <fullName>Birthday__c</fullName>
    <label>Birthday</label>
    <length>255</length>
    <type>Text</type>
</CustomField>