force-app/main/default/objects/EmployeeInstruction__c/fields/DealerCode__c.field-meta.xml
<CustomField>
    <fullName>DealerCode__c</fullName>
    <description>Mã DO</description>
    <label>DealerCode</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>