force-app/main/default/objects/EmployeeInstruction__c/fields/DistrictCode__c.field-meta.xml
<CustomField>
    <fullName>DistrictCode__c</fullName>
    <label>District code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>