force-app/main/default/objects/EmployeeInstruction__c/fields/DmsOrderId__c.field-meta.xml
<CustomField>
    <fullName>DmsOrderId__c</fullName>
    <label>DmsOrderId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>