force-app/main/default/objects/EmployeeInstruction__c/fields/EmployeeCode__c.field-meta.xml
<CustomField>
    <fullName>EmployeeCode__c</fullName>
    <label>EmployeeCode</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>