force-app/main/default/objects/EmployeeInstruction__c/fields/EmployeeName__c.field-meta.xml
<CustomField>
    <fullName>EmployeeName__c</fullName>
    <label>EmployeeName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>