force-app/main/default/objects/EmployeeInstruction__c/fields/IsGenerated__c.field-meta.xml
<CustomField>
    <fullName>IsGenerated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsGenerated</label>
    <type>Checkbox</type>
</CustomField>