force-app/main/default/objects/EmployeeInstruction__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <description>Họ</description>
    <label>LastName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>