force-app/main/default/objects/EmployeeInstruction__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <label>Mobile</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>