force-app/main/default/objects/EmployeeInstruction__c/fields/ModelCode__c.field-meta.xml
<CustomField>
    <fullName>ModelCode__c</fullName>
    <description>Mã model xe</description>
    <label>ModelCode</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>