force-app/main/default/objects/EmployeeInstruction__c/fields/ProvinceCode__c.field-meta.xml
<CustomField>
    <fullName>ProvinceCode__c</fullName>
    <label>Province code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>