force-app/main/default/objects/EmployeeInstruction__c/fields/PurchaseType__c.field-meta.xml
<CustomField>
    <fullName>PurchaseType__c</fullName>
    <label>PurchaseType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>