force-app/main/default/objects/EmployeeInstruction__c/fields/SNS__c.field-meta.xml
<CustomField>
    <fullName>SNS__c</fullName>
    <label>SNS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>