force-app/main/default/objects/EmployeeInstruction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Address__c</columns>
    <columns>Birthday__c</columns>
    <columns>DealerCode__c</columns>
    <columns>District__c</columns>
    <columns>Email__c</columns>
    <columns>EmployeeCode__c</columns>
    <columns>EmployeeName__c</columns>
    <columns>LastName__c</columns>
    <columns>MiddleName__c</columns>
    <columns>Gender__c</columns>
    <columns>Province__c</columns>
    <columns>PurchaseType__c</columns>
    <columns>SNS__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>